<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/popupPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="550dp"
        android:background="@drawable/about_back"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537">

        <ImageView
            android:id="@+id/author_imageIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/Author_image"
            android:src="@drawable/author" />

        <TextView
            android:id="@+id/myName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/author_imageIV"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/myName"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/studentId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/myName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/myStudentId"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/myMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/studentId"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/message"
            android:textColor="@color/white"
            android:textSize="14sp" />

        <TextView
            android:layout_width="102dp"
            android:layout_height="102dp"
            android:layout_above="@+id/myName"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/author_back" />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>