<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/firstEquation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="236dp"
        android:text="@string/firstNumber"
        android:textColor="@color/firstEquation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/secondEquation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/secondEquation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="236dp"
        android:layout_marginEnd="48dp"
        android:text="@string/secondNumber"
        android:textColor="@color/secondEquation"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/greaterBtn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="652dp"
        android:background="@drawable/main_btn"
        android:text="@string/greaterBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equalBtn"
        android:layout_width="96dp"
        android:layout_height="60dp"
        android:layout_marginTop="492dp"
        android:background="@drawable/main_btn"
        android:text="@string/equalBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/countDown"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/lessBtn"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_marginTop="652dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/main_btn"
        android:text="@string/lessBtn"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="88dp"
        android:text=""
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/equalBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/countDown"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="155dp"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="53dp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/firstEquation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="178dp"
        android:layout_marginBottom="32dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>